# Axion

./: .env.example  .gitignore  AGENTS.md  FEATURE_PROMPTS.md  README.md  STANDING-INSTRUCTIONS.md  TODO.md  _close.test.jsx  build.js  package-lock.json  package.json  watch.js
api-proxy/: .env.example  .gitignore  package-lock.json  package.json  server.js
api-proxy-cf/: package-lock.json  package.json  schema.sql  wrangler.toml
axion-vision-space/: app.py
axon/: README.md  pyproject.toml  setup.py
axon/bindings/: bindings.cpp
axon/include/axon/: hardware.h  memory_ops.h  thread_pool.h
axon/python/axon/: __init__.py  callbacks.py  cli.py  config.py  export.py  hardware.py  memory.py  prefetch.py  trainer.py
axon/src/: hardware.cpp  memory_ops.cpp  thread_pool.cpp
axon/tests/: conftest.py  test_callbacks.py  test_config.py  test_hardware.py  test_memory.py
data-pipeline/: clean.py  config.py  format_qwen.py  generate_synthetic.py  lumen13_sft_kaggle.py  pipeline.py  pyproject.toml  scrape_docs.py  scrape_github.py  upload_dataset.py
data-pipeline/sources/: hf.py
dataset_pipeline/: README.md  config.py  filter.py  generator.py  llm_client.py  main.py  merger.py  scraper.py  test_providers.py  utils.py
docs/: 404.html  admin.html  announcements.html  chat.html  console.html  docs.html  index.html  index.md  keys.html  lumen-12.html  lumen-121.html  lumen-125-safety.html  lumen-model.html  lumen-safety.html  lumen-suspension.html  lumen.html  manifest.json  mcp-catalog.json  mcp.html  models.html  playground.html  privacy.html  privacy.md  project-crucible.html  sw.js  tos.html  tos.md
extension/: background.js  make-icons.js  sidebar.css  sidebar.html  sidebar.js
lumen-data/: clean.py  config.py  main.py
lumen-space/: app.py
src/: bridge.js  collect-daemon.js  (+7 more)
(+240 files in other folders)
