[build-system]
requires = ["setuptools>=68", "pybind11>=2.11", "cmake>=3.18"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "axon-training"
version = "0.1.0"
description = "CPU-optimized fine-tuning framework for 7B–12B language models"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Max (Ravikxx) / Axion Labs" }]
requires-python = ">=3.9"

# Runtime dependencies
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "bitsandbytes>=0.43.0",   # 4-bit NF4 quantization with CPU backend
    "trl>=0.8.6",             # SFTTrainer for supervised fine-tuning
    "datasets>=2.14.0",
    "accelerate>=0.27.0",
    "psutil>=5.9.0",          # RAM monitoring in callbacks
    "sentencepiece>=0.1.99",  # tokenizer support for LLaMA/Mistral
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark",
]

[project.urls]
Homepage   = "https://github.com/ravikxx/axion"
Repository = "https://github.com/ravikxx/axion"

[tool.setuptools.packages.find]
where = ["python"]
