[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "lumen-pipeline"
version = "0.1.0"
description = "Lumen 1.3 SFT data pipeline - scrape, generate, clean, format"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
lumen-pipeline = "lumen_pipeline.pipeline:main"
lumen-scrape-github = "lumen_pipeline.scrape_github:main"
lumen-scrape-docs = "lumen_pipeline.scrape_docs:main"
lumen-generate-synthetic = "lumen_pipeline.generate_synthetic:main"

[tool.setuptools.packages.find]
include = ["lumen_pipeline*"]
